--- a/part4/front/login.html
+++ b/part4/front/login.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!--HEADER-->
+    <header>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <button class="login-button">LOGIN</button>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="login.html" id="login-link">Login</a>
+        </nav>
+    </header>
+    <!--HEADER-->
     <main>
         <form id="login-form">
             <h2>Login</h2>
@@ -21,4 +31,9 @@
     </main>
     <script src="scripts.js"></script>
 </body>
+<footer>
+    <div>
+    <p>© All rights reserved</p>
+    </div>
+</footer>
 </html>
