--- a/part4/front/place.html
+++ b/part4/front/place.html
@@ -50,10 +50,12 @@
         </section>
     </main>
     <script src="scripts.js"></script>
-</body>
-<footer>
+    <!-- FOOTER -->
+    <footer>
     <div>
     <p>© All rights reserved</p>
     </div>
-</footer>
+    </footer>
+    <!-- FOOTER -->
+</body>
 </html>
