--- a/part4/front/add_review.html
+++ b/part4/front/add_review.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!--HEADER-->
+    <header>
+        <img class="logo" src="images/logo.png" alt="logo">
+        <a class="login-button" href="login.html">LOGIN</a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="login.html" id="login-link">Login</a>
+        </nav>
+    </header>
+    <!--HEADER-->
     <main>
         <!-- Add something to idfentify the place you're reviewing -->
         <form id="review-form">
@@ -16,10 +26,22 @@
             <label for="rating">Rating:</label>
             <select id="rating" name="rating" required>
                 <!-- Options for rating -->
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
             </select>
             <button type="submit">Submit Review</button>
         </form>
     </main>
     <script src="scripts.js"></script>
+    <!-- FOOTER -->
+    <footer>
+    <div>
+    <p>© All rights reserved</p>
+    </div>
+    </footer>
+    <!-- FOOTER -->
 </body>
 </html>
