fixed loggin button + kept section empty so js will populate it (example in comment)

--- a/part4/front/index.html
+++ b/part4/front/index.html
@@ -11,7 +11,7 @@
     <!--HEADER-->
     <header>
         <img class="logo" src="images/logo.png" alt="logo">
-        <button class="login-button">LOGIN</button>
+        <a class="login-button" href="login.html">LOGIN</a>
         <nav>
             <a href="index.html">Home</a>
             <a href="login.html" id="login-link">Login</a>
@@ -27,30 +27,15 @@
             </select>
         </section>
         <section id="places-list">
-            <div class="place_card">
-                <a href="place.html3"> <img src="" alt="Some beautiful place"></a>
+            <!-- exemple 
+            <div class="place-card">
+                <a href="place.html"> <img src="" alt="Some beautiful place"></a>
                 <div class="place_container">
                     <h4>Title of the place</h4>
                     <p>Price</p>
                     <a class=details-button href="place.html">View details</a>
                 </div>
-            </div>
-            <div class="place_card">
-                <a href="place.html3"> <img src="" alt="Some beautiful place"></a>
-                <div class="place_container">
-                    <h4>Title of the place</h4>
-                    <p>Price</p>
-                    <a class=details-button href="place.html">View details</a>
-                </div>
-            </div>
-            <div class="place_card">
-                <a href="place.html3"> <img src="" alt="Some beautiful place"></a>
-                <div class="place_container">
-                    <h4>Title of the place</h4>
-                    <p>Price</p>
-                    <a class=details-button href="place.html">View details</a>
-                </div>
-            </div>
+            </div> -->
             <!-- List of places will be populated dynamically -->
         </section>
     </main>
