--- a/part4/front/login.html
+++ b/part4/front/login.html
@@ -10,7 +10,7 @@
     <!--HEADER-->
     <header>
         <img class="logo" src="images/logo.png" alt="logo">
-        <button class="login-button">LOGIN</button>
+        <a class="login-button" href="login.html">LOGIN</a>
         <nav>
             <a href="index.html">Home</a>
             <a href="login.html" id="login-link">Login</a>
@@ -30,10 +30,12 @@
         </form>
     </main>
     <script src="scripts.js"></script>
-</body>
-<footer>
+    <!-- FOOTER -->
+    <footer>
     <div>
     <p>© All rights reserved</p>
     </div>
-</footer>
+    </footer>
+    <!-- FOOTER -->
+</body>
 </html>
