added an error text area if invalid credentials or 500

--- a/part4/front/login.html
+++ b/part4/front/login.html
@@ -28,6 +28,7 @@
             
             <button type="submit">Login</button>
         </form>
+        <p id="error-text"></p>
     </main>
     <script src="scripts.js"></script>
     <!-- FOOTER -->
