option for the filter

--- a/part4/front/index.html
+++ b/part4/front/index.html
@@ -23,6 +23,10 @@
             <h2>Filtres</h2>
             <label for="price-filter">Max Price:</label>
             <select id="price-filter">
+                <option value="all">All</option>
+                <option value="10">10</option>
+                <option value="50">50</option>
+                <option value="100">100</option>
                 <!-- Options will be populated dynamically -->
             </select>
         </section>
